--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,7 +16,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #0077ff, #00c9ff);
+            background: linear-gradient(90deg, #0077ff, #4400ff);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -73,7 +73,8 @@
         .auth-container button {
             width: 100%;
             padding: 14px;
-            background: linear-gradient(to left, #0077ff, #00b8ff);
+            background: linear-gradient(90deg, #0077ff, #4400ff);
+
             color: #fff;
             font-size: 1rem;
             border: none;
@@ -83,7 +84,8 @@
         }
 
         .auth-container button:hover {
-            background: linear-gradient(to left, #005fcc, #0099cc);
+            background: linear-gradient(90deg, #0077ff, #4400ff);
+
             transform: scale(1.02);
         }
 
