--- a/views/users.ejs
+++ b/views/users.ejs
@@ -156,6 +156,93 @@
             font-size: 3rem;
             margin-bottom: 12px;
         }
+
+        #vip {
+            font-size: large;
+            width: 50px;
+            height: 25px;
+            position: absolute;
+            top: 50px;
+            border: none;
+            border-radius: 20px;
+            background-color: gold;
+        }
+
+        #boxx {
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Stay in place */
+            z-index: 1;
+            /* Sit on top */
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            /* Full width */
+            height: 100%;
+            /* Full height */
+            overflow: auto;
+            /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0);
+            /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4);
+            /* Black w/ opacity */
+            animation: slide-up 0.5s;
+        }
+
+        @keyframes slide-up {
+            from {
+                left: -100%;
+                opacity: 0
+            }
+
+            to {
+                left: 0;
+                opacity: 1
+            }
+        }
+
+        .modal-content {
+            background-color: #F6F4EB;
+            margin: 15% auto;
+            /* 15% from the top and centered */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            height: 40% auto;
+            /* Could be more or less, depending on screen size */
+            border-radius: 8px;
+            box-sizing: border-box;
+        }
+
+        #code {
+            width: 90px;
+            height: 25px;
+            position: relative;
+            right: 60px;
+            padding: 10px;
+            font-size: 18px;
+            border: 1px solid #aaa;
+            border-radius: 5px;
+        }
+
+        #subb {
+            width: 50px;
+            font-size: 18px;
+            margin-top: 10px;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            position: relative;
+            right: 80px;
+        }
+
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
@@ -187,6 +274,50 @@
                 </div>
                 <% } %>
     </div>
+    <button id="vip">VIP</button>
+    <div id="boxx">
+        <div class="modal-content">
+            <span id="close">❌</span>
+            <h2>کد خود را وارد کنید !!</h2>
+            <input type="number" id="code">
+            <button id="subb" onclick="checkCode()">تأیید</button>
+
+            <div id="errorMsg" class="error"></div>
+        </div>
+    </div>
+    <script>
+        const btn = document.getElementById('vip');
+        const box = document.getElementById('boxx');
+        const colse = document.getElementById('close');
+
+        btn.addEventListener('click', () => {
+            box.style.display = 'block';
+            box.style.animation = 'slide-up 0.5s';
+        });
+
+        colse.addEventListener('click', () => {
+            box.style.animation = 'slide-down 0.5s';
+            box.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+                modal.style.animation = 'slide-down 0.5s';
+            }
+        });
+        function checkCode() {
+            const correctCode = "1387412"; // کد صحیح
+            const input = document.getElementById("code").value;
+
+            if (input === correctCode) {
+                // انتقال به صفحه‌ی success.html
+                window.location.href = "popox-webchat.up.railway.app/happybirthday";
+            } else {
+                document.getElementById("errorMsg").textContent = "کد وارد شده اشتباه است.";
+            }
+        }
+    </script>
 </body>
 
 </html>
