--- a/views/users.ejs
+++ b/views/users.ejs
@@ -312,7 +312,7 @@
 
             if (input === correctCode) {
                 // انتقال به صفحه‌ی success.html
-                window.location.href = "popox-webchat.up.railway.app/happybirthday";
+                window.location.href = "https://popox-webchat.up.railway.app/happybirthday";
             } else {
                 document.getElementById("errorMsg").textContent = "کد وارد شده اشتباه است.";
             }
